NOTICKET: Ensure all hero image layers align at the bottom, reducing bleed

--- a/test-app/src/custom-components/homepage-template.less
+++ b/test-app/src/custom-components/homepage-template.less
@@ -25,6 +25,7 @@
     url('./images/homepage-hero-left.svg') left top no-repeat;
   background-size: 100% auto, auto 100%, auto 100%;
   background-color: @edu-primary-color-light;
+  margin-bottom: -1px; // mitigate subpixel alignment issue of the 3 images
 
   @media @edu-media-phone {
     background:
